[package]
name = "test_local_storage"
version = "0.1.0"
authors = ["Beni <reydmanb@myumanitoba.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = "0.31"
rmp-serde = "0.14.3"
serde = { version = "1.0", features = ["derive"] }